--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
 .logo {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 16px;
     color: var(--white);
 }
 
